tests/valid/trynamestatements.nim
# Count: 0
# Negative count: 1

try:
  echo "hello"
except Exception:
  discard
